--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hi! I am your test page.asdfasfaksjdklfjeklrjoasjfkjaskd
-            Hello i am 
+            i am ibrahim
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
